the yellow box issue was an issue because the yellow box lived in the div i wanted to z-index it behind. It works as expected now.

--- a/public/css/index-styles.css
+++ b/public/css/index-styles.css
@@ -66,7 +66,7 @@ body {
     top: 30vh;
     height: 200px;
     font: 16px Ubuntu;
-    z-index: -7;
+    /* z-index: -1; */
     /* display: none; */
 
   }
@@ -75,9 +75,9 @@ body {
     display: none;
   }
 
-  .show{
+  /* .show{
     display: block;
-  }
+  } */
   
   .visuallyhidden {
     opacity: 0;
